# QuantumUQ

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.venv-test/: pyvenv.cfg
docs/: api.md  index.md  requirements.txt
docs/examples/: 00_pennylane_quickstart.ipynb  04_shots_sweep_noise_profile.ipynb
examples/notebooks/: 00_pennylane_quickstart.ipynb  01_qiskit_quickstart.ipynb  02_pennylane_training_ensemble.ipynb  03_qiskit_training_spsa.ipynb  04_shots_sweep_noise_profile.ipynb
examples/notebooks/examples/artifacts/: pennylane_vqc_params_0.npy
examples/scripts/: run_smoke_examples.py
paper/: paper.bib  paper.md
paper/jats/: paper.jats
quantumuq/: __init__.py  py.typed
quantumuq/adapters/: __init__.py  pennylane_adapter.py  qiskit_adapter.py
quantumuq/core/: methods.py  metrics.py
quantumuq/datasets/: toy.py
tests/: test_imports_and_datasets.py  test_methods.py  test_metrics.py
